fixed alignment for reports 'Time' column

--- a/frontend/report/report.scss
+++ b/frontend/report/report.scss
@@ -453,8 +453,8 @@
 }
 
 .report-time-cell{
-    padding: 7px 29px 5px 12px;
-    float: left;
+    padding: 7px 9px 5px 12px;
+    float: right;
 }
 
 .time-header{
